[gd_scene load_steps=6 format=3 uid="uid://dpxmxey3qs0o6"]

[ext_resource type="Script" uid="uid://fhmp1dkucxds" path="res://scenes/inventory/inventory_ui.gd" id="1_bxceu"]
[ext_resource type="PackedScene" uid="uid://b8xh1jbh84qru" path="res://scenes/ui/item_panel.tscn" id="1_tvok8"]
[ext_resource type="PackedScene" uid="uid://0ek8bcdoiphi" path="res://scenes/ui/party_ui.tscn" id="3_8ojme"]

[sub_resource type="Gradient" id="Gradient_tvok8"]
colors = PackedColorArray(0.0637001, 0.129845, 0.248212, 1, 0.118241, 0.275435, 0.329541, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_bxceu"]
gradient = SubResource("Gradient_tvok8")

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bxceu")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_bxceu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 24

[node name="InventoryItems" type="GridContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 280)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 6

[node name="InventoryItem" parent="MarginContainer/HBoxContainer/InventoryItems" instance=ExtResource("1_tvok8")]
layout_mode = 2

[node name="InventoryItem2" parent="MarginContainer/HBoxContainer/InventoryItems" instance=ExtResource("1_tvok8")]
layout_mode = 2

[node name="InventoryItem3" parent="MarginContainer/HBoxContainer/InventoryItems" instance=ExtResource("1_tvok8")]
layout_mode = 2

[node name="InventoryItem4" parent="MarginContainer/HBoxContainer/InventoryItems" instance=ExtResource("1_tvok8")]
layout_mode = 2

[node name="InventoryItem5" parent="MarginContainer/HBoxContainer/InventoryItems" instance=ExtResource("1_tvok8")]
layout_mode = 2

[node name="InventoryItem6" parent="MarginContainer/HBoxContainer/InventoryItems" instance=ExtResource("1_tvok8")]
layout_mode = 2

[node name="InventoryItem7" parent="MarginContainer/HBoxContainer/InventoryItems" instance=ExtResource("1_tvok8")]
layout_mode = 2

[node name="InventoryItem8" parent="MarginContainer/HBoxContainer/InventoryItems" instance=ExtResource("1_tvok8")]
layout_mode = 2

[node name="InventoryItem9" parent="MarginContainer/HBoxContainer/InventoryItems" instance=ExtResource("1_tvok8")]
layout_mode = 2

[node name="InventoryItem10" parent="MarginContainer/HBoxContainer/InventoryItems" instance=ExtResource("1_tvok8")]
layout_mode = 2

[node name="InventoryItem11" parent="MarginContainer/HBoxContainer/InventoryItems" instance=ExtResource("1_tvok8")]
layout_mode = 2

[node name="InventoryItem12" parent="MarginContainer/HBoxContainer/InventoryItems" instance=ExtResource("1_tvok8")]
layout_mode = 2

[node name="PartyUI" parent="MarginContainer/HBoxContainer" instance=ExtResource("3_8ojme")]
unique_name_in_owner = true
layout_mode = 2
